apps/base/karakeep/service-meilisearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: karakeep-meilisearch
  namespace: karakeep
spec:
  type: ClusterIP
  selector:
    app: karakeep
    component: meilisearch
  ports:
    - name: http
      port: 7700
      targetPort: http
      protocol: TCP
