apps/base/karakeep/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: karakeep
  namespace: karakeep
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - karakeep.sarma.love
      secretName: sarma-wildcard-tls
  rules:
    - host: karakeep.sarma.love
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: karakeep-web
                port:
                  name: http
